--- a/Pub Crawler/Base.lproj/Main.storyboard
+++ b/Pub Crawler/Base.lproj/Main.storyboard
@@ -31,9 +31,43 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="113" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xQi-DN-Php">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="xbm-U2-g1t">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="113"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xbm-U2-g1t" id="22M-KZ-cXx">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="112"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mhs-gQ-o8S">
+                                                    <rect key="frame" x="8" y="0.0" width="584" height="112"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Zpz-VV-uRL"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vwU-PZ-kCq"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xQi-DN-Php" secondAttribute="trailing" id="0Uh-he-gkg"/>
+                            <constraint firstItem="xQi-DN-Php" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2en-DL-bC8"/>
+                            <constraint firstItem="xQi-DN-Php" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Iif-KH-XOK"/>
+                            <constraint firstItem="xQi-DN-Php" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="mxp-X6-zif"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tUO-tH-Iz5"/>
+                    <connections>
+                        <outlet property="tableView" destination="xQi-DN-Php" id="ADR-z5-KOB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
