--- a/Pub Crawler/Base.lproj/Main.storyboard
+++ b/Pub Crawler/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Big tour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6g-Yi-LUl">
                                                     <rect key="frame" x="8" y="45" width="584" height="21"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -110,17 +110,41 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7DE-y9-e7a">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMH-x2-M73">
+                                <rect key="frame" x="0.0" y="20" width="600" height="62"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAu-DO-usw">
+                                <rect key="frame" x="0.0" y="90" width="600" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="qef-Fm-1hM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="qYw-pd-TDd" firstAttribute="top" secondItem="7DE-y9-e7a" secondAttribute="bottom" constant="450" id="8jp-TY-RhM"/>
-                            <constraint firstAttribute="trailing" secondItem="7DE-y9-e7a" secondAttribute="trailing" id="bto-cq-hXx"/>
-                            <constraint firstItem="7DE-y9-e7a" firstAttribute="top" secondItem="zKu-DE-3XX" secondAttribute="top" id="dsL-ay-Nwf"/>
-                            <constraint firstItem="7DE-y9-e7a" firstAttribute="leading" secondItem="zKu-DE-3XX" secondAttribute="leading" id="xgB-yl-Osi"/>
+                            <constraint firstItem="bMH-x2-M73" firstAttribute="leading" secondItem="bAu-DO-usw" secondAttribute="leading" id="ATQ-N6-5cb"/>
+                            <constraint firstItem="bMH-x2-M73" firstAttribute="top" secondItem="zKu-DE-3XX" secondAttribute="top" constant="20" symbolic="YES" id="EYo-UV-0sd"/>
+                            <constraint firstItem="qYw-pd-TDd" firstAttribute="top" secondItem="7DE-y9-e7a" secondAttribute="bottom" constant="450" id="Gp0-e7-syH"/>
+                            <constraint firstItem="7DE-y9-e7a" firstAttribute="top" secondItem="zKu-DE-3XX" secondAttribute="top" id="Pd0-UF-XCf"/>
+                            <constraint firstItem="bAu-DO-usw" firstAttribute="trailing" secondItem="bMH-x2-M73" secondAttribute="trailing" id="Y4d-ab-AfN"/>
+                            <constraint firstItem="bMH-x2-M73" firstAttribute="leading" secondItem="7DE-y9-e7a" secondAttribute="leading" id="YBo-72-u2h"/>
+                            <constraint firstItem="bAu-DO-usw" firstAttribute="trailing" secondItem="7DE-y9-e7a" secondAttribute="trailing" id="Zuz-k4-JGF"/>
+                            <constraint firstItem="bAu-DO-usw" firstAttribute="top" secondItem="bMH-x2-M73" secondAttribute="bottom" constant="8" symbolic="YES" id="aJm-Jl-XNa"/>
+                            <constraint firstAttribute="trailing" secondItem="bMH-x2-M73" secondAttribute="trailing" id="ckf-cC-kXY"/>
+                            <constraint firstItem="bAu-DO-usw" firstAttribute="bottom" secondItem="7DE-y9-e7a" secondAttribute="bottom" id="pII-5f-bLr"/>
+                            <constraint firstItem="7DE-y9-e7a" firstAttribute="leading" secondItem="zKu-DE-3XX" secondAttribute="leading" id="z9L-qo-5x9"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="header" destination="7DE-y9-e7a" id="WVg-HX-Uax"/>
+                        <outlet property="subtitleLabel" destination="bAu-DO-usw" id="VGj-u5-OAk"/>
+                        <outlet property="titleLabel" destination="bMH-x2-M73" id="5ae-LT-puQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4eb-E4-vBi" userLabel="First Responder" sceneMemberID="firstResponder"/>
