--- a/Pub Crawler/Base.lproj/Main.storyboard
+++ b/Pub Crawler/Base.lproj/Main.storyboard
@@ -211,7 +211,7 @@
                         <outlet property="subtitleLabel" destination="bAu-DO-usw" id="VGj-u5-OAk"/>
                         <outlet property="tableView" destination="wFk-pZ-ebz" id="Nwj-VA-dG0"/>
                         <outlet property="titleLabel" destination="bMH-x2-M73" id="5ae-LT-puQ"/>
-                        <segue destination="zJf-kF-VFk" kind="show" identifier="showPubSegue" id="tTb-Yu-RU1"/>
+                        <segue destination="zJf-kF-VFk" kind="show" identifier="showPubSegue" id="seJ-pd-DLV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4eb-E4-vBi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -229,8 +229,95 @@
                     <view key="view" contentMode="scaleToFill" id="sKs-J6-wmp">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ju2-Um-FP9">
+                                <rect key="frame" x="0.0" y="64" width="600" height="192"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jNy-Id-m7t">
+                                <rect key="frame" x="0.0" y="264" width="600" height="210"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <sections>
+                                    <tableViewSection id="6fo-ct-dBJ">
+                                        <cells>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="H4s-38-2Gt">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H4s-38-2Gt" id="c05-O5-Tks">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRs-pX-utm">
+                                                            <rect key="frame" x="8" y="10" width="42" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$$$$$" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYt-yZ-Htj">
+                                                            <rect key="frame" x="410" y="8" width="182" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="590-Xr-MVs">
+                                                <rect key="frame" x="0.0" y="44" width="600" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="590-Xr-MVs" id="Z8d-Ky-Ql0">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FFq-AV-dpA">
+                                                            <rect key="frame" x="8" y="11" width="49" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="*****" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ns0-I5-2bZ">
+                                                            <rect key="frame" x="412" y="11" width="180" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="111" id="883-bc-2hO">
+                                                <rect key="frame" x="0.0" y="88" width="600" height="111"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="883-bc-2hO" id="RXL-s5-kBp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="110"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QjW-zh-bxp">
+                                                            <rect key="frame" x="0.0" y="0.0" width="592" height="110"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </cells>
+                                    </tableViewSection>
+                                </sections>
+                            </tableView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zX6-xj-zzV">
+                                <rect key="frame" x="0.0" y="482" width="600" height="118"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5ns-pH-K8b" firstAttribute="top" secondItem="Ju2-Um-FP9" secondAttribute="bottom" constant="344" id="1ay-XD-dsg"/>
+                            <constraint firstItem="Ju2-Um-FP9" firstAttribute="leading" secondItem="sKs-J6-wmp" secondAttribute="leading" id="HSA-Ey-ChQ"/>
+                            <constraint firstItem="Ju2-Um-FP9" firstAttribute="top" secondItem="BND-nh-ULL" secondAttribute="bottom" id="MsV-33-YzY"/>
+                            <constraint firstAttribute="trailing" secondItem="Ju2-Um-FP9" secondAttribute="trailing" id="Naw-LC-BSA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerImage" destination="Ju2-Um-FP9" id="bfa-NU-qfE"/>
+                        <outlet property="view" destination="sKs-J6-wmp" id="ayv-dU-PFw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hZf-il-DKn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
